# Projeto-Elemaq2

./: calculateTensions.py  pyproject.toml
matlabelemaq2/: deflexao2.mlx  modTrapInt.mlx  tensao.mlx
output/: output.txt
redutor/: Gear.py  GearTransmission.py  Material.py  Pulley.py  PulleyTransmission.py  Shaft.py  SystemVariables.py  __init__.py
