[tool.poetry]
name = "projeto-elemaq2"
version = "0.1.0"
description = ""
authors = ["pabloharbar <harbar2705@gmail.com>"]
readme = "README.md"
packages = [{include = "projeto_elemaq2"}]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.10.0"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
